# app-starter

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RUST_STYLE_GUIDE.md  SECURITY.md  TS_STYLE_GUIDE.md  UPGRADING.md  VISION.md  build.rs  compose.yml  deny.toml  justfile
.claude/: settings.json
.claude/hooks/: protect-vision.sh
.claude/skills/add-component/: SKILL.md
.claude/skills/add-component/scripts/: validate-component.sh
.claude/skills/add-migration/: SKILL.md
.claude/skills/add-migration/scripts/: check-migrations.sh
.claude/skills/add-plugin/: SKILL.md
.claude/skills/add-resource/: SKILL.md
.claude/skills/add-resource/scripts/: validate-resource.sh
.claude/skills/configure-theme/: SKILL.md
.claude/skills/cut-release/: SKILL.md
.claude/skills/cut-release/scripts/: preflight-release.sh
.claude/skills/harden-for-production/: SKILL.md
.claude/skills/harden-for-production/scripts/: production-audit.sh
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adoption_friction.yml  bug_report.yml  change_request.yml  feature_request.yml  generated_app_backport.yml
.github/workflows/: ci.yml  release.yml
desktop/: package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: add-a-resource.md  api-endpoint.md  authoring-a-plugin.md  components.md  contribution-prompts.md  desktop-features.md  plugin-framework-impl-status.md  plugin-framework-research.md  plugin-framework-review.md  plugin-framework.md  production-readiness.md  radix-integration-plan.md  radix-reference.md  radix-workflow.md  template-direction.md
docs/archive/: radix-integration-plan.md
docs/recipes/: backup-restore.md
interface/: .env.example  .gitignore  biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
interface/e2e/: a11y.spec.ts  screenshots.spec.ts
interface/src/: a11y.test.tsx  jest-axe.d.ts  main.tsx  router.tsx  styles.css  test-setup.ts  test-utils.tsx  vite-env.d.ts
interface/src/api/: client.test.ts  client.ts  schema.d.ts
interface/src/components/app/: ErrorFallback.test.tsx  ErrorFallback.tsx  StartupGate.test.tsx  StartupGate.tsx  reportBoundaryError.ts
interface/src/components/sections/: DataList.test.tsx  DataList.tsx  Field.test.tsx  Field.tsx  FilterBar.test.tsx  FilterBar.tsx  PageHeader.test.tsx  PageHeader.tsx  StatGroup.test.tsx  StatGroup.tsx  Toolbar.test.tsx  Toolbar.tsx
interface/src/components/theme/: ThemeProvider.tsx  ThemeToggle.tsx
interface/src/components/ui/: Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  Checkbox.test.tsx  Checkbox.tsx  Dialog.test.tsx  Dialog.tsx  DropdownMenu.test.tsx  DropdownMenu.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorState.test.tsx  ErrorState.tsx  Input.test.tsx  Input.tsx  Spinner.test.tsx  Spinner.tsx  Tooltip.test.tsx  Tooltip.tsx  VisuallyHidden.test.tsx  VisuallyHidden.tsx  cn.test.ts  cn.ts  cx.test.ts  cx.ts
interface/src/hooks/: useApiMutation.test.ts  useApiMutation.ts  useApiQuery.test.ts  useApiQuery.ts  useCategories.ts  useResource.test.ts  useResource.ts  useSettings.ts
interface/src/lib/: money.ts
interface/src/pages/: Categories.tsx  Dashboard.tsx  Expenses.test.tsx  Expenses.tsx  Home.test.tsx  Home.tsx  Items.actions.test.tsx  Items.test.tsx  Items.tsx  Posts.actions.test.tsx  Posts.test.tsx  Posts.tsx  Settings.tsx
interface/src/plugins/: contract.ts  registry.test.ts  registry.ts
interface/src/plugins/blog/: Blog.actions.test.tsx  Blog.test.tsx  Blog.tsx  plugin.tsx
interface/src/plugins/todo/: Todo.actions.test.tsx  Todo.test.tsx  Todo.tsx  plugin.tsx
interface/src/theme/: accent.css  icons.ts  radix.catalog.json  radix.catalog.test.ts  theme.config.ts
migrations/: 20260611000001_create_items.sql  20260613000001_create_posts.sql  20260614000001_create_categories.sql  20260614000002_create_expenses.sql  20260614000003_create_settings.sql  20260621000001_add_posts_status_check.sql  README.md
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
plugins/: .gitkeep
plugins/blog/: Cargo.toml  plugin.toml
plugins/blog/migrations/: 20260623000002_create_blog_posts.sql
plugins/blog/src/: lib.rs
plugins/todo/: Cargo.toml  plugin.toml
plugins/todo/migrations/: 20260623000001_create_todo_items.sql
plugins/todo/src/: lib.rs
scripts/: bundle-sidecar.sh  db.sh  db.test.sh  doctor.sh  new-plugin.sh  release-smoke.sh  setup.ps1  setup.sh
src/: api.rs  categories.rs  db.rs  error.rs  expenses.rs  frontend.rs  items.rs  lib.rs  main.rs  plugin.rs  plugins.rs  posts.rs  seed.rs  settings.rs  summary.rs
src/api/: categories.rs  expenses.rs  health.rs  items.rs  mod.rs  posts.rs  settings.rs  summary.rs
src/plugins/: mod.rs
tests/: api.rs  common.rs  plugins.rs  seed.rs
