[package]
name = "app-starter-desktop"
version = "0.1.1"
edition = "2021"

# Standalone crate: not part of the root package's build. It has its own
# Cargo.lock so the heavy Tauri dependency tree never slows server builds.
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
